# object_detection

./: CMakeLists.txt  ost.yaml  package.xml
src/: compressed_node.cpp  orb_node.cpp  trial_node.cpp
